package at.fb.Util;

import java.util.ArrayList;

/**
 * Saves the currency types
 *
 */
public class CurrencyType {

    public static ArrayList<String> currencys = new ArrayList<>();

}
